# template-c

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
cmake/: CMakeUtils.cmake
include/: TestOperations.h
src/: TestOperations.c  main.c
tests/: CMakeLists.txt
tests/integration_test/: CMakeLists.txt  ExampleIntegrationTest.c
tests/unit_test/: CMakeLists.txt  ExampleUnitTest.c
